--- a/hw2/index.html
+++ b/hw2/index.html
@@ -14,7 +14,8 @@
 		<a style="color: #DBDEE1", href="https://cal-cs184-student.github.io/hw-webpages-sp24-ElShroomster/"> Main Page </a>
 
 		<h3><b>Overview</b></h3>
-		<p style="color: #DBDEE1; width: 100%">This is the glorious overview. </p>
+		<p style="color: #DBDEE1; width: 100%">This assignment was very interesting to complete. The initial segments primarily focused on the intricate world of bezier curves, albeit in varying dimensions. While our classroom discussions had introduced us to the concept of managing bezier curves in 3D, it wasn't until we dove into the actual code that everything truly clicked.</p>
+		<p style="color: #DBDEE1; width: 100%"> It was particularly cool to see how the code generates many bezier curves all parallel to each other, draws a bezier curve between them, and then selects a point. (Now, it isn't quite true that we generate full bezier curves, since we only calculate singular points, but it was still very interesting regardless.)</p>
 		<br>
 		
 		<h3><b>Part 1: Bezier Curves with 1D de Casteljau Subdivision</b></h3>
