--- a/hw2/index.html
+++ b/hw2/index.html
@@ -6,6 +6,13 @@
 		<script type="text/javascript" id="MathJax-script" async
   			src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
 		</script>
+		<script>
+  			MathJax = {
+    				tex: {
+      					inlineMath: [['$', '$']]
+    				}
+  			};
+		</script>
  		<link rel="stylesheet" href="styling.css">
 		<Title>Homework 2 - Geometric Modeling </Title>
 	</head>
