--- a/hw2/index.html
+++ b/hw2/index.html
@@ -40,24 +40,30 @@
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/step2.png" alt="svg4 Less Aliased">
 			</div>
+		</div>
+		<div class="row">
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/step3.png" alt="svg4 Less Aliased">
 			</div>
-		</div>
-		<div class="row">
   			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/step4.png" alt="svg4 Aliased">
 			</div>
 			<div class="column">
 				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/step5.png" alt="svg4 Slightly Aliased">
 			</div>
+		</div>
+		<p style="color: #DBDEE1; width: 100%">The final Bezier curve can be seen below:</p>
+		<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/finalcurve2.png" alt="svg4 Less Aliased">
+		<p style="color: #DBDEE1; width: 100%">Here are a few more edits to a second curve:</p>
+		<div class="row">
 			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/finalcurve2.png" alt="svg4 Less Aliased">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/curve2base.png" alt="svg4 Less Aliased">
 			</div>
 			<div class="column">
-				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/finalcurve2.png" alt="svg4 Less Aliased">
+				<img src="https://raw.githubusercontent.com/cal-cs184-student/hw-webpages-sp24-ElShroomster/master/hw2/edited t.png" alt="svg4 Less Aliased">
 			</div>
 		</div>
+
 		<br>
 		
 		
