--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<br><br>
 		<a href="/hw1/index.html">Homework 1 - Rasterizer</a>
 		<br><br>
-		<a href="/hw2/index.html">Homework 2</a>
+		<a href="/hw2/index.html">Homework 2 - Meshes</a>
 		<br><br>
 		<a href="/hw3/index.html">Homework 3</a>
 		<br><br>
